--- a/src/Pages/Home/Login/Register/Register.css
+++ b/src/Pages/Home/Login/Register/Register.css
@@ -1,8 +1,9 @@
 .register-form{
     margin: 0 auto;
     width: 50%;
+    display: block;
 }
-/* .register-form input:not([type=checkbox]){
+.register-form input{
     display: block;
     width: 100%;
     height: 40px;
@@ -11,4 +12,4 @@
     padding-left: 10px;
     font-size: 16px;
     margin-bottom: 15px;
-} */
+}
